# sort-algo-visualizer

./: .gitignore  README.md  SETUP_MACOS.md  install-rpi.sh  run-rpi.sh  run_comparison.sh
assets/: README.md
cpp/: CMakeLists.txt  CMakeLists.txt.macos  CMakeLists.txt.rpi  README_DEVELOPERS.md  build_rpi.sh  install-rpi.sh  run-rpi.sh
cpp/src/: algorithms.h  bubble_sort.cpp  main.cpp  selection_sort.cpp  visualizer.h
rust/: Cargo.toml  install-rpi.sh  run-rpi.sh
rust/src/: main.rs  visualizer.rs
rust/src/algorithms/: bubble_sort.rs  mod.rs  selection_sort.rs
