[package]
name = "sort_visualizer"
version = "0.1.0"
edition = "2021"

[dependencies]
macroquad = "0.4"
rodio = "0.17"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
core-graphics = "0.23"
objc = "0.2"

# Optimize for smaller binary size on Raspberry Pi
[profile.release]
opt-level = 2
lto = true
codegen-units = 1
